--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
-    "@mui/x-date-pickers-pro": "^6.16.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,12 +17,14 @@
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.14",
     "axios": "^1.6.0",
+    "chakra-dayzed-datepicker": "^0.2.10",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
-    "framer-motion": "^10.16.4",
+    "dayzed": "^3.2.3",
+    "framer-motion": "^6.5.1",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
-    "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
