--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.15",
-    "@mui/material": "^5.14.15",
+    "@mui/material": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.33",
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.14",
+    "@uselessdev/datepicker": "^2.7.0",
     "axios": "^1.6.0",
     "chakra-dayzed-datepicker": "^0.2.10",
     "date-fns": "^2.30.0",
