--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.14",
     "@uselessdev/datepicker": "^2.7.0",
+    "antd": "^5.11.5",
     "axios": "^1.6.0",
     "chakra-dayzed-datepicker": "^0.2.10",
     "date-fns": "^2.30.0",
